--- a/SystemBank/Site.Master
+++ b/SystemBank/Site.Master
@@ -5,12 +5,27 @@
 <html>
 <head runat="server">
     <title><%: Page.Title %> - System Bank</title>
-    
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="Content/css/bootstrap.min.css" rel="stylesheet" />
+   <!-- <link href="Content/css/bootstrap.min.css" rel="stylesheet" />
     <script src="Content/js/bootstrap.min.js"></script>
+    <script src="Content/js/jquery-3.3.1.min.js"></script>
+    <script src="Content/js/toastr.js"></script>
+    <link href="Content/css/toastr.css" rel="stylesheet" />
+    <script src="Content/js/jquery-3.3.1.slim.min.js"></script>
+    <script src="Content/js/popper.min.js"></script>
+    <link href="Content/css/all.css" rel="stylesheet" /> 
+       -->
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    
 
 
     <asp:ContentPlaceHolder ID="head" runat="server">
@@ -18,7 +33,7 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <a class="navbar-brand" href="../../Home.aspx">System Bank</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menu">
             <span class="navbar-toggler-icon"></span>
@@ -26,13 +41,27 @@
 
         <div class="collapse navbar-collapse" id="Menu">
             <ul class="navbar-nav mr-auto">
+
                 <li class="nav-item active">
                     <a class="nav-link" href="../../Home.aspx">Home<span class="sr-only">(current)</span></a>
                 </li>
+                                
+                <!-- Dropdown -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#"  data-toggle="dropdown">Registros</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" runat="server" href="/UI/Registros/rCuentas.aspx">Cuentas</a>
+                        <a class="dropdown-item" runat="server" href="/UI/Registros/rDepositos.aspx">Depositos</a>
+                    </div>
+                </li>
 
-                <li class="nav-item"> <a class="nav-link" href="/UI/Registros/rCuentas.aspx">Cuentas</a> <li>
-
-                <li class="nav-item"> <a class="nav-link" href="/UI/Registros/rDepositos.aspx">Depositos</a> </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#"  data-toggle="dropdown">Consultas</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" runat="server" href="/UI/Consultas/cCuentas.aspx">Cuentas</a>
+                        <a class="dropdown-item" runat="server" href="/UI/Consultas/cDepositos.aspx">Depositos</a>
+                    </div>
+                </li>
 
 
             </ul>
@@ -50,7 +79,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                 <p>&copy; <%: DateTime.Now.Year %> - System Bank</p>
+                <p>&copy; <%: DateTime.Now.Year %> - System Bank</p>
             </footer>
         </div>
     </form>
